# suckit

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/: dependabot.yml  env.sh
.github/workflows/: bloat.yml  build_and_test.yml  clippy.yml  coverage.yml  release.yml  unit.yml
src/: args.rs  css_parser.rs  disk.rs  dom.rs  downloader.rs  filetype.rs  lib.rs  logger.rs  main.rs  parser.rs  response.rs  scraper.rs  url.rs  url_helper.rs
tests/: auth.rs  benchmark.py  charset.rs  charset_html_found.rs  charset_html_not_found.rs  charset_http_found.rs  charset_http_not_found.rs  external.rs  filters.rs  local_server_setup.sh  requirements.txt  results.csv  speed.csv  speed_regression.py
tests/fixtures/: charset_test_html.html  charset_test_html_no_meta.html  index.html  mod.rs  no_download_no_visit.html  style.css
