[package]
name = "suckit"
version = "0.1.0"
edition = "2018"
authors = ["Esteban \"Skallwar\" Blanc <estblcsk@gmail.com>",
	   "Arthur \"CohenArthur\" Cohen <arthur.cohen@epita.fr>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/skallwar/suckit"
repository = "https://github.com/skallwar/suckit"
documentation = "https://github.com/skallwar/suckit"
readme = "README.md"
description = "SuckIT, Suck the InTernet"
keywords = ["cli"]
categories = ["command-line-utilities"]
include = [
	"README.md",
	"LICENSE*",
	"Cargo.toml",
	"src/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "^0.3"
crossbeam = "^0.8"
reqwest = { version = "^0.10", features = ["blocking", "cookies"] }
kuchiki = "^0.8"
colored = "2.0"
chrono = "^0.4"
bytes = "^0.6"
percent-encoding = "^2.1"
url = "^2.2"
rand = "^0.8"
regex = "^1.4"
encoding_rs = "0.8.26"

[dev-dependencies]
tiny_http = "^0.7"
