[package]
name = "suckit"
version = "0.2.0"
edition = "2018"
authors = ["Esteban \"Skallwar\" Blanc <estblcsk@gmail.com>",
	   "Arthur \"CohenArthur\" Cohen <cohenarthur.dev@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/skallwar/suckit"
repository = "https://github.com/skallwar/suckit"
documentation = "https://github.com/skallwar/suckit"
readme = "README.md"
description = "SuckIT, Suck the InTernet"
keywords = ["cli"]
categories = ["command-line-utilities"]
include = [
	"README.md",
	"LICENSE*",
	"Cargo.toml",
	"src/*",
]

[package.metadata]
msrv = "1.49.0"

[lib]
name = "suckit"
path = "src/lib.rs"

[[bin]]
name = "suckit"
path = "src/bin/suckit.rs"
doc = false

[dependencies]
structopt = "^0.3"
crossbeam = "^0.8"
reqwest = { version = "^0.11", features = ["blocking", "cookies"] }
kuchiki = "^0.8"
colored = "2.0"
chrono = "^0.4"
url = "^2.3"
rand = "^0.8"
regex = "^1.6"
encoding_rs = "^0.8"
lazy_static = "1.4.0"
pathdiff = "^0.2"
md5 = "^0.7"
symlink = "^0.1.0"

[dev-dependencies]
tiny_http = "^0.11"
subprocess = "^0.2"

[profile.release]
lto = true
